--- a/index.html
+++ b/index.html
@@ -2,21 +2,49 @@
 <html lang="en-US">
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link href="css/styles.css">
+  <link href="css/styles.css" rel="stylesheet">
   <title>Michael Reiersgaard</title>
 </head>
 <body>
-  <!-- Requirements:
-  Your name.
-An image of you, or something that represents you.
-A list of projects you have created with active links to their GitHub pages sites or GitHub repositories.
-For each, include a brief description of the project and what languages it uses.
-An “About Me” section.
-Your background (education, job experience, or why did you decide to take a class on programming, etc).
-Your current interests, hobbies, and skills.
-A gh-pages branch so that your site may be viewed on GitHub Pages at your-username.github.io/portfolio. -->
+  <div class="container" id="header">
+    <img id ="headshot" src="images/me.jpg" alt="Michael Reiersgaard Headshot">
+    <h1>Michael Reiersgaard</h1>
+    <a href="#">GitHub Link</a>
+  </div>
   <div class="container">
-    
+    <div class="row">
+      <div class="col-4">
+        <h2>About Me</h2>
+        <h3>Education</h3>
+        <h3>Job Experience</h3>
+        <h3>Hobbies</h3>
+      </div>
+      <div class="col-8">
+        <h2>Projects</h2>
+        <div class="container">
+          <div class="row">
+            <div class="card project-card">
+              <img src="images/me.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Project Title</h5>
+                <p class="card-text">Paragraph info</p>
+                <a href="#" class="btn btn-primary">GitHub</a>
+                <a href="#" class="btn btn-primary">GitHub Pages</a>
+              </div>
+            </div>
+            <div class="card project-card">
+              <img src="images/me.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Project Title</h5>
+                <p class="card-text">Paragraph info</p>
+                <a href="#" class="btn btn-primary">GitHub</a>
+                <a href="#" class="btn btn-primary">GitHub Pages</a>
+              </div>
+            </div>
+        </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
