add about me content, update projects grid

--- a/index.html
+++ b/index.html
@@ -10,38 +10,83 @@
     <img id ="headshot" src="images/me.jpg" alt="Michael Reiersgaard Headshot">
     <h1>Michael Reiersgaard</h1>
     <a href="#">GitHub Link</a>
+    <a href="#">LinkedIn</a>
   </div>
-  <div class="container">
+  <div class="container main">
     <div class="row">
-      <div class="col-4">
+      <div class="col-3 sidebar">
         <h2>About Me</h2>
-        <h3>Education</h3>
-        <h3>Job Experience</h3>
-        <h3>Hobbies</h3>
+        <p>A paragraph about me.</p>
+        <h4>Education</h4>
+        <ul>
+          <li>
+            <strong>Epicodus</strong>
+            <p>In Progress - Full-Stack Program<br><em>Option: Ruby/React</em></p>
+          </li>
+          <li>
+            <strong>Oregon State University</strong>
+            <p>2011 - Bachelors of Science - Liberal Studies<br><em>Option: New Media Communications</em></p>
+          </li>
+        </ul>
+         <h4>Job Experience</h4>
+         <ul>
+           <li>
+             Web Development Project Management
+           </li>
+           <li>
+             Digital Marketing
+           </li>
+         </ul>
+        <h4>Hobbies</h4>
+        <ul>
+          <li>
+            Guitar
+          </li>
+          <li>
+            Photography
+          </li>
+          </li>
+        </ul>
       </div>
-      <div class="col-8">
+      <div class="col-9">
         <h2>Projects</h2>
-        <div class="container">
-          <div class="row">
-            <div class="card project-card">
-              <img src="images/me.jpg" alt="" class="card-img-top">
-              <div class="card-body">
-                <h5 class="card-title">Project Title</h5>
-                <p class="card-text">Paragraph info</p>
-                <a href="#" class="btn btn-primary">GitHub</a>
-                <a href="#" class="btn btn-primary">GitHub Pages</a>
-              </div>
+        <div class="row row-cols-1 row-cols-md-4 gap-3 g-0">
+          <div class="card project-card">
+            <img src="images/me.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Project Title</h5>
+              <p class="card-text">Paragraph info</p>
+              <a href="#" class="btn btn-dark">GitHub</a>
+              <a href="#" class="btn btn-light">GitHub Pages</a>
             </div>
-            <div class="card project-card">
-              <img src="images/me.jpg" alt="" class="card-img-top">
-              <div class="card-body">
-                <h5 class="card-title">Project Title</h5>
-                <p class="card-text">Paragraph info</p>
-                <a href="#" class="btn btn-primary">GitHub</a>
-                <a href="#" class="btn btn-primary">GitHub Pages</a>
-              </div>
+          </div>
+          <div class="card project-card">
+            <img src="images/me.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Project Title</h5>
+              <p class="card-text">Paragraph info</p>
+              <a href="#" class="btn btn-dark">GitHub</a>
+              <a href="#" class="btn btn-light">GitHub Pages</a>
             </div>
-        </div>
+          </div>
+          <div class="card project-card">
+            <img src="images/me.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Project Title</h5>
+              <p class="card-text">Paragraph info</p>
+              <a href="#" class="btn btn-dark">GitHub</a>
+              <a href="#" class="btn btn-light">GitHub Pages</a>
+            </div>
+          </div>
+          <div class="card project-card">
+            <img src="images/me.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Project Title</h5>
+              <p class="card-text">Paragraph info</p>
+              <a href="#" class="btn btn-dark">GitHub</a>
+              <a href="#" class="btn btn-light">GitHub Pages</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
