add projects,  images

--- a/index.html
+++ b/index.html
@@ -54,37 +54,55 @@
           <div class="card project-card">
             <img src="images/me.jpg" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Paragraph info</p>
-              <a href="#" class="btn btn-dark">GitHub</a>
-              <a href="#" class="btn btn-light">GitHub Pages</a>
+              <h5 class="card-title">Portfolio</h5>
+              <p class="card-text">You're lookin' at it; holy recursion, Batman!</p>
+              <a href="https://github.com/mireie/portfolio" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="#" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
           </div>
           <div class="card project-card">
-            <img src="images/me.jpg" alt="" class="card-img-top">
+            <img src="images/pi.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Paragraph info</p>
-              <a href="#" class="btn btn-dark">GitHub</a>
-              <a href="#" class="btn btn-light">GitHub Pages</a>
+              <h5 class="card-title">Paradise Island</h5>
+              <p class="card-text">A showcase of Bootstrap and CSS.</p>
+              <a href="https://github.com/mireie/vacation" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="https://mireie.github.io/vacation/" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
           </div>
           <div class="card project-card">
-            <img src="images/me.jpg" alt="" class="card-img-top">
+            <img src="images/as.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Paragraph info</p>
-              <a href="#" class="btn btn-dark">GitHub</a>
-              <a href="#" class="btn btn-light">GitHub Pages</a>
+              <h5 class="card-title">Animal Shelter</h5>
+              <p class="card-text">Practicing box model with HTML and CSS.</p>
+              <a href="https://github.com/mireie/animal-shelter" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="https://mireie.github.io/animal-shelter/" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
           </div>
           <div class="card project-card">
-            <img src="images/me.jpg" alt="" class="card-img-top">
+            <img src="images/id.png" alt="" class="card-img-top">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Paragraph info</p>
-              <a href="#" class="btn btn-dark">GitHub</a>
-              <a href="#" class="btn btn-light">GitHub Pages</a>
+              <h5 class="card-title">Interior Design</h5>
+              <p class="card-text">CSS blocks?</p>
+              <a href="https://github.com/mireie/id" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="https://mireie.github.io/id/" target="_blank" class="btn btn-light">GitHub Pages</a>
+            </div>
+          </div>
+          <div class="card project-card">
+            <img src="images/band.png" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Band</h5>
+              <p class="card-text">Work with CSS floats.</p>
+              <a href="https://github.com/mireie/band" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="https://mireie.github.io/band/" target="_blank" class="btn btn-light">GitHub Pages</a>
+            </div>
+          </div>
+          <div class="card project-card">
+            <img src="images/cupcake.png" alt="" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Cupcake</h5>
+              <p class="card-text">Work with CSS floats.</p>
+              <a href="https://github.com/mireie/cupcake" target="_blank" class="btn btn-dark">GitHub</a>
+              <a href="https://mireie.github.io/cupcake/" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
           </div>
         </div>
