--- a/index.html
+++ b/index.html
@@ -14,27 +14,38 @@
   </div>
   <div class="container main">
     <div class="row">
-      <div class="col-3 sidebar">
+      <div class="col-md-3 sidebar">
         <h2>About Me</h2>
-        <p>A paragraph about me.</p>
+        <p>
+          A paragraph about me.<br>
+          My objectives are:
+          <ol>
+            <li>Learn</li>
+            <li>Fun</li>
+            <li>Work</li>
+          </ol>
+        </p>
         <h4>Education</h4>
-        <ul>
+        <ul class="no-bullet">
           <li>
             <strong>Epicodus</strong>
             <p>In Progress - Full-Stack Program<br><em>Option: Ruby/React</em></p>
           </li>
           <li>
             <strong>Oregon State University</strong>
-            <p>2011 - Bachelors of Science - Liberal Studies<br><em>Option: New Media Communications</em></p>
+            <p>2011 - B.S. - Liberal Studies<br><em>Option: New Media Communications</em></p>
           </li>
         </ul>
          <h4>Job Experience</h4>
-         <ul>
+         <ul class="no-bullet">
            <li>
-             Web Development Project Management
+              <strong>Project Management</strong>
            </li>
            <li>
-             Digital Marketing
+             <strong>Web Development</strong>
+           </li>
+           <li>
+             <strong>Digital Marketing</strong>
            </li>
          </ul>
         <h4>Hobbies</h4>
@@ -48,7 +59,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-9">
+      <div class="col-md-9 projects">
         <h2>Projects</h2>
         <div class="row row-cols-1 row-cols-md-4 gap-3 g-0">
           <div class="card project-card">
