update card styling

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
       </div>
       <div class="col-md-9 projects">
         <h2>Projects</h2>
-        <div class="row row-cols-1 row-cols-md-4 gap-3 g-0">
-          <div class="card project-card">
+        <div class="row row-cols-1 row-cols-md-3 g-3">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/me.jpg" alt="" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Portfolio</h5>
@@ -70,50 +71,61 @@
               <a href="https://github.com/mireie/portfolio" target="_blank" class="btn btn-dark">GitHub</a>
               <a href="#" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
+            </div>
           </div>
-          <div class="card project-card">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/pi.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Paradise Island</h5>
-              <p class="card-text">A showcase of Bootstrap and CSS.</p>
-              <a href="https://github.com/mireie/vacation" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/vacation/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <div class="card-body">
+                <h5 class="card-title">Paradise Island</h5>
+                <p class="card-text">A showcase of Bootstrap and CSS.</p>
+                <a href="https://github.com/mireie/vacation" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/vacation/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
-          <div class="card project-card">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/as.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Animal Shelter</h5>
-              <p class="card-text">Practicing box model with HTML and CSS.</p>
-              <a href="https://github.com/mireie/animal-shelter" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/animal-shelter/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <div class="card-body">
+                <h5 class="card-title">Animal Shelter</h5>
+                <p class="card-text">Practicing box model with HTML and CSS.</p>
+                <a href="https://github.com/mireie/animal-shelter" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/animal-shelter/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
-          <div class="card project-card">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/id.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Interior Design</h5>
-              <p class="card-text">CSS blocks?</p>
-              <a href="https://github.com/mireie/id" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/id/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <div class="card-body">
+                <h5 class="card-title">Interior Design</h5>
+                <p class="card-text">CSS blocks?</p>
+                <a href="https://github.com/mireie/id" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/id/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
-          <div class="card project-card">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/band.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Band</h5>
-              <p class="card-text">Work with CSS floats.</p>
-              <a href="https://github.com/mireie/band" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/band/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <div class="card-body">
+                <h5 class="card-title">Band</h5>
+                <p class="card-text">Work with CSS floats.</p>
+                <a href="https://github.com/mireie/band" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/band/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
-          <div class="card project-card">
+          <div class="col">
+            <div class="card project-card">
             <img src="images/cupcake.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Cupcake</h5>
-              <p class="card-text">Work with CSS floats.</p>
-              <a href="https://github.com/mireie/cupcake" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/cupcake/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <div class="card-body">
+                <h5 class="card-title">Cupcake</h5>
+                <p class="card-text">Work with CSS floats.</p>
+                <a href="https://github.com/mireie/cupcake" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/cupcake/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
         </div>
