update image sizes, mobile project style

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </div>
       <div class="col-md-9 projects">
         <h2>Projects</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-3">
+        <div class="row row-cols-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card project-card">
-            <img src="images/me.jpg" alt="" class="card-img-top">
+            <img src="images/portfolio.png" alt="" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Portfolio</h5>
               <p class="card-text">You're lookin' at it; holy recursion, Batman!</p>
