add content to sidebar.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       <div class="col-md-3 sidebar">
         <h2>About Me</h2>
         <p>
-          A paragraph about me.<br>
+          Hi there, I'm Michael. I'm taking a break from full-time employment to expand my skillset and complete a long-standing goal of programming full-time. 
+          <br>
           My objectives are:
           <ol>
-            <li>Learn</li>
-            <li>Fun</li>
-            <li>Work</li>
+            <li>Learn new, valuable skills.</li>
+            <li>Enjoy learning and creating.</li>
+            <li>Find employment utilizing my varied and extensive work history.</li>
           </ol>
         </p>
         <h4>Education</h4>
@@ -36,22 +37,28 @@
             <p>2011 - B.S. - Liberal Studies<br><em>Option: New Media Communications</em></p>
           </li>
         </ul>
-         <h4>Job Experience</h4>
+         <h4>Work Experience</h4>
          <ul class="no-bullet">
            <li>
               <strong>Project Management</strong>
+              <p><strong>4 years</strong> project management focused on ecommerce web development within agencies and freelance.</p>
            </li>
            <li>
              <strong>Web Development</strong>
+             <p><strong>2 years</strong> freelance web development experience.</p>
            </li>
            <li>
              <strong>Digital Marketing</strong>
+             <p><strong>5 years</strong> internal, agency, and freelance digital marketing experience</p>
            </li>
          </ul>
         <h4>Hobbies</h4>
         <ul>
           <li>
             Guitar
+          </li>
+          <li>
+            Kickball
           </li>
           <li>
             Photography
