update heading style

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 <body>
   <div class="container" id="header">
     <img id ="headshot" src="images/me.jpg" alt="Michael Reiersgaard Headshot">
-    <h1>Michael Reiersgaard</h1>
+    <h1 class="display-5">Michael Reiersgaard</h1>
     <a href="#">GitHub Link</a>
     <a href="#">LinkedIn</a>
   </div>
   <div class="container main">
     <div class="row">
       <div class="col-md-3 sidebar">
-        <h2>About Me</h2>
+        <h3 class="display-6">About Me</h3>
         <p>
-          Hi there, I'm Michael. I'm taking a break from full-time employment to expand my skillset and complete a long-standing goal of programming full-time. 
-          <br>
-          My objectives are:
+          <span class="lead">Hi there, I'm Michael.<br></span> I'm taking a break from full-time employment to expand my skillset and complete a long-standing goal of programming full-time. 
+        </p>
+          <p class="lead">My objectives are:</p>
           <ol>
             <li>Learn new, valuable skills.</li>
             <li>Enjoy learning and creating.</li>
             <li>Find employment utilizing my varied and extensive work history.</li>
           </ol>
         </p>
-        <h4>Education</h4>
+        <h3 class="display-6">Education</h3 class="display-6">
         <ul class="no-bullet">
           <li>
             <strong>Epicodus</strong>
@@ -37,7 +37,7 @@
             <p>2011 - B.S. - Liberal Studies<br><em>Option: New Media Communications</em></p>
           </li>
         </ul>
-         <h4>Work Experience</h4>
+         <h3 class="display-6">Work Experience</h3 class="display-6">
          <ul class="no-bullet">
            <li>
               <strong>Project Management</strong>
@@ -52,7 +52,7 @@
              <p><strong>5 years</strong> internal, agency, and freelance digital marketing experience</p>
            </li>
          </ul>
-        <h4>Hobbies</h4>
+        <h3 class="display-6">Hobbies</h3 class="display-6">
         <ul>
           <li>
             Guitar
@@ -67,7 +67,7 @@
         </ul>
       </div>
       <div class="col-md-9 projects">
-        <h2>Projects</h2>
+        <h2 class="display-6">Projects</h2>
         <div class="row row-cols-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card project-card">
@@ -76,7 +76,7 @@
               <h5 class="card-title">Portfolio</h5>
               <p class="card-text">You're lookin' at it; holy recursion, Batman!</p>
               <a href="https://github.com/mireie/portfolio" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="#" target="_blank" class="btn btn-light">GitHub Pages</a>
+              <a href="https://mireie.github.io/portfolio/" target="_blank" class="btn btn-light">GitHub Pages</a>
             </div>
             </div>
           </div>
@@ -96,7 +96,7 @@
             <img src="images/as.png" alt="" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Animal Shelter</h5>
-                <p class="card-text">Practicing box model with HTML and CSS.</p>
+                <p class="card-text">Practice with inheritance and cascading styles in CSS.</p>
                 <a href="https://github.com/mireie/animal-shelter" target="_blank" class="btn btn-dark">GitHub</a>
                 <a href="https://mireie.github.io/animal-shelter/" target="_blank" class="btn btn-light">GitHub Pages</a>
               </div>
@@ -107,7 +107,7 @@
             <img src="images/id.png" alt="" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Interior Design</h5>
-                <p class="card-text">CSS blocks?</p>
+                <p class="card-text">Practice with the box model.</p>
                 <a href="https://github.com/mireie/id" target="_blank" class="btn btn-dark">GitHub</a>
                 <a href="https://mireie.github.io/id/" target="_blank" class="btn btn-light">GitHub Pages</a>
               </div>
@@ -118,7 +118,7 @@
             <img src="images/band.png" alt="" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Band</h5>
-                <p class="card-text">Work with CSS floats.</p>
+                <p class="card-text">Practice with floats on images and sidebars.</p>
                 <a href="https://github.com/mireie/band" target="_blank" class="btn btn-dark">GitHub</a>
                 <a href="https://mireie.github.io/band/" target="_blank" class="btn btn-light">GitHub Pages</a>
               </div>
@@ -129,9 +129,9 @@
             <img src="images/cupcake.png" alt="" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Cupcake</h5>
-                <p class="card-text">Work with CSS floats.</p>
-                <a href="https://github.com/mireie/cupcake" target="_blank" class="btn btn-dark">GitHub</a>
-                <a href="https://mireie.github.io/cupcake/" target="_blank" class="btn btn-light">GitHub Pages</a>
+                <p class="card-text">Practice with CSS classes.</p>
+                <a href="https://github.com/mireie/cupcakes" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/cupcakes/" target="_blank" class="btn btn-light">GitHub Pages</a>
               </div>
             </div>
           </div>
