add gh and li icons.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div class="container" id="header">
     <img id ="headshot" src="images/me.jpg" alt="Michael Reiersgaard Headshot">
     <h1 class="display-5">Michael Reiersgaard</h1>
-    <a href="#">GitHub Link</a>
-    <a href="#">LinkedIn</a>
+    <a href="https://github.com/mireie" target="_blank"><img src="images/gh.png"  class="bug" alt="GitHub Logo"></a>
+    <a href="https://www.linkedin.com/in/mreiersgaard/" target="_blank"><img src="images/li.png"  class="bug" alt="LinkedIn Logo"></a>
   </div>
   <div class="container main">
     <div class="row">
