add other projects

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </ul>
       </div>
       <div class="col-md-9 projects">
-        <h2 class="display-6">Projects</h2>
+        <h2 class="display-6">Epicodus Projects</h2>
         <div class="row row-cols-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card project-card">
@@ -132,6 +132,32 @@
                 <p class="card-text">Practice with CSS classes.</p>
                 <a href="https://github.com/mireie/cupcakes" target="_blank" class="btn btn-dark">GitHub</a>
                 <a href="https://mireie.github.io/cupcakes/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2 class="display-6">Other Projects</h2>
+          <div class="row row-cols-2 g-6">
+            <div class="col">
+              <div class="card project-card">
+                <img src="images/11.png" alt="Eleven PDX" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">ElevenPDX</h5>
+                  <p class="card-text">A Wordpress site for everything music & arts related in the Portland area.</p>
+                  <a href="https://elevenpdx.com" target="_blank" class="btn btn-dark">Website</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card project-card">
+                <img src="images/pp.png" alt="PDX Pick" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">PDX Pick</h5>
+                  <p class="card-text">A Wordpress site that served as your Guide to Portland Entertainment and #PDXmusic.
+                  </p>
+                  <a href="https://web.archive.org/web/20180422101439/http://pdxpick.com/" target="_blank" class="btn btn-dark">Wayback Machine</a>
+                </div>
               </div>
             </div>
           </div>
