--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet">
-  <title>Michael Reiersgaard</title>
+  <title>Michael Reiersgaard - Portfolio</title>
 </head>
 <body>
   <div class="container" id="header">
