add spacing to other projects section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div>
-          <h2 class="display-6">Other Projects</h2>
+          <h2 class="display-6" id="other-projects">Other Projects</h2>
           <div class="row row-cols-2 g-6">
             <div class="col">
               <div class="card project-card">
