--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </li>
           </li>
         </ul>
+        <span id="copyright">&copy; 2021 Michael Reiersgaard</span>
       </div>
       <div class="col-md-9 projects">
         <h2 class="display-6">Epicodus Projects</h2>
