--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link href="css/styles.css" rel="stylesheet">
   <title>Michael Reiersgaard - Portfolio</title>
   <link rel="icon" type="image/png" href="images/fav.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="container" id="header">
