indentation cleanup, alt tag additions

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <p>
           <span class="lead">Hi there, I'm Michael.<br></span> I'm taking a break from full-time employment to expand my skillset and complete a long-standing goal of programming full-time. 
         </p>
-          <p class="lead">My objectives are:</p>
-          <ol>
-            <li>Learn new, valuable skills.</li>
-            <li>Enjoy learning and creating.</li>
-            <li>Find employment utilizing my varied and extensive work history.</li>
-          </ol>
-        </p>
-        <h3 class="display-6">Education</h3 class="display-6">
+        <p class="lead">My objectives are:</p>
+        <ol>
+          <li>Learn new, valuable skills.</li>
+          <li>Enjoy learning and creating.</li>
+          <li>Find employment utilizing my varied and extensive work history.</li>
+        </ol>
+        <h3 class="display-6">Education</h3>
         <ul class="no-bullet">
           <li>
             <strong>Epicodus</strong>
@@ -38,22 +37,22 @@
             <p>2011 - B.S. - Liberal Studies<br><em>Option: New Media Communications</em></p>
           </li>
         </ul>
-         <h3 class="display-6">Work Experience</h3 class="display-6">
-         <ul class="no-bullet">
-           <li>
-              <strong>Project Management</strong>
-              <p><strong>4 years</strong> project management focused on ecommerce web development within agencies and freelance.</p>
-           </li>
-           <li>
-             <strong>Web Development</strong>
-             <p><strong>2 years</strong> freelance web development experience.</p>
-           </li>
-           <li>
-             <strong>Digital Marketing</strong>
-             <p><strong>5 years</strong> internal, agency, and freelance digital marketing experience</p>
-           </li>
-         </ul>
-        <h3 class="display-6">Hobbies</h3 class="display-6">
+        <h3 class="display-6">Work Experience</h3>
+        <ul class="no-bullet">
+          <li>
+            <strong>Project Management</strong>
+            <p><strong>4 years</strong> project management focused on ecommerce web development within agencies and freelance.</p>
+          </li>
+          <li>
+            <strong>Web Development</strong>
+            <p><strong>2 years</strong> freelance web development experience.</p>
+          </li>
+          <li>
+            <strong>Digital Marketing</strong>
+            <p><strong>5 years</strong> internal, agency, and freelance digital marketing experience</p>
+          </li>
+        </ul>
+        <h3 class="display-6">Hobbies</h3>
         <ul>
           <li>
             Guitar
@@ -73,18 +72,18 @@
         <div class="row row-cols-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card project-card">
-            <img src="images/portfolio.png" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Portfolio</h5>
-              <p class="card-text">You're lookin' at it; holy recursion, Batman!</p>
-              <a href="https://github.com/mireie/portfolio" target="_blank" class="btn btn-dark">GitHub</a>
-              <a href="https://mireie.github.io/portfolio/" target="_blank" class="btn btn-light">GitHub Pages</a>
-            </div>
+              <img src="images/portfolio.png" alt="Portfolio project screenshot" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Portfolio</h5>
+                <p class="card-text">You're lookin' at it; holy recursion, Batman!</p>
+                <a href="https://github.com/mireie/portfolio" target="_blank" class="btn btn-dark">GitHub</a>
+                <a href="https://mireie.github.io/portfolio/" target="_blank" class="btn btn-light">GitHub Pages</a>
+              </div>
             </div>
           </div>
           <div class="col">
             <div class="card project-card">
-            <img src="images/pi.png" alt="" class="card-img-top">
+              <img src="images/pi.png" alt="Paradise Island Screenshot" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Paradise Island</h5>
                 <p class="card-text">A showcase of Bootstrap and CSS.</p>
@@ -95,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card project-card">
-            <img src="images/as.png" alt="" class="card-img-top">
+              <img src="images/as.png" alt="Animal Shelter Project Screenshot" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Animal Shelter</h5>
                 <p class="card-text">Practice with inheritance and cascading styles in CSS.</p>
@@ -106,7 +105,7 @@
           </div>
           <div class="col">
             <div class="card project-card">
-            <img src="images/id.png" alt="" class="card-img-top">
+              <img src="images/id.png" alt="Interior Design Project Screenshot" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Interior Design</h5>
                 <p class="card-text">Practice with the box model.</p>
@@ -117,7 +116,7 @@
           </div>
           <div class="col">
             <div class="card project-card">
-            <img src="images/band.png" alt="" class="card-img-top">
+            <img src="images/band.png" alt="Band Website Screenshot" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Band</h5>
                 <p class="card-text">Practice with floats on images and sidebars.</p>
@@ -128,7 +127,7 @@
           </div>
           <div class="col">
             <div class="card project-card">
-            <img src="images/cupcake.png" alt="" class="card-img-top">
+              <img src="images/cupcake.png" alt="Cupcake Project Screenshot" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Cupcake</h5>
                 <p class="card-text">Practice with CSS classes.</p>
@@ -143,9 +142,9 @@
           <div class="row row-cols-2 g-6">
             <div class="col">
               <div class="card project-card">
-                <img src="images/11.png" alt="Eleven PDX" class="card-img-top">
+                <img src="images/11.png" alt="Eleven PDX Screenshot" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">ElevenPDX</h5>
+                  <h5 class="card-title">Eleven PDX</h5>
                   <p class="card-text">A Wordpress site for everything music & arts related in the Portland area.</p>
                   <a href="https://elevenpdx.com" target="_blank" class="btn btn-dark">Website</a>
                 </div>
@@ -153,11 +152,10 @@
             </div>
             <div class="col">
               <div class="card project-card">
-                <img src="images/pp.png" alt="PDX Pick" class="card-img-top">
+                <img src="images/pp.png" alt="PDX Pick Screenshot" class="card-img-top">
                 <div class="card-body">
                   <h5 class="card-title">PDX Pick</h5>
-                  <p class="card-text">A Wordpress site that served as your Guide to Portland Entertainment and #PDXmusic.
-                  </p>
+                  <p class="card-text">A Wordpress site that served as your Guide to Portland Entertainment and #PDXmusic.</p>
                   <a href="https://web.archive.org/web/20180422101439/http://pdxpick.com/" target="_blank" class="btn btn-dark">Wayback Machine</a>
                 </div>
               </div>
